--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -1,7 +1,6 @@
 <div class="cfar-offer-banner-large-page-container p-32" fxLayout="row wrap" fxLayoutAlign="start start">
 
-    <p fxFlex="100">This banner can be integrated in your booking funnel in order to display CFAR offers to the User. CFAR offers will be created dynamically, including a description in the page’s language and a starting price.
-        Following a click of the User on the 'Add' button, the CFAR Dialog will open.</p>
+    <p fxFlex="100">This banner can be integrated in your booking funnel in order to display CFAR offers to the User. CFAR offers will be created dynamically, including a description in the page’s language and a starting price.</p>
 
     <mat-tab-group fxFlex="100" backgroundColor="primary" class="tab-group mb-16">
 
@@ -13,8 +12,7 @@
                     [currentLang]="currentLang"
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
-                    [extAttributes]="extAttributes"
-                    (offerAccepted)="onOfferAccepted($event)"
+                    (chooseCoverage)="onChooseCoverage($event)"
                 ></hopper-cfar-offer-banner-large>
             </div>
         </mat-tab>
