--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -2,7 +2,7 @@
 
     <ng-container *ngIf="!isLoading">
 
-        <mat-card class="mat-elevation-z4 m-16 pointer" fxFlex fxLayout="row wrap">
+        <mat-card *ngIf="cfarOffers" class="mat-elevation-z4 m-16 pointer" fxFlex fxLayout="row wrap">
     
             <div fxFlex="90" fxFlex.lt-md="100" fxLayout="row wrap">
 
