--- a/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner/cfar-offer-banner.component.html
@@ -2,7 +2,7 @@
 
     <ng-container *ngIf="!isLoading">
 
-        <mat-card class="m-16 pointer" fxFlex fxLayout="row wrap">
+        <mat-card *ngIf="cheapestOffer" class="m-16 pointer" fxFlex fxLayout="row wrap">
     
             <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px">
     
