--- a/projects/angular-sdk/src/components/event-button/event-button.component.html
+++ b/projects/angular-sdk/src/components/event-button/event-button.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px" class="p-16">
+<!-- <div fxLayout="row wrap" fxLayoutAlign="start center" fxLayoutGap="16px" class="p-16">
     <button HopperEventsDirective mat-flat-button color="primary">Primary button 1</button>
     <button HopperEventsDirective 
         [hopperEventId]="hopperEventId" 
@@ -20,4 +20,4 @@
     <button mat-button color="accent">Accent button 3</button>
     <button mat-button disabled>Disabled button 3</button>
     <button mat-button>Secondary button 3</button>
-</div>
+</div>-->
