--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@
             height: 100vh !important;
     
             app-navbar {
-                @include mat.elevation(12);
+                @include mat-elevation(12);
             }
         }
     }
