--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -80,7 +80,7 @@
                 border-radius: 0px;
                 
                 &:hover {
-                    @include mat.elevation(4);
+                    @include mat-elevation(4);
                 }
 
                 &.active {
