--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -40,7 +40,13 @@
                 <mat-card class="full-width m-16" fxFlex fxLayout="row wrap" *ngFor="let offer of cfarOffers" 
                     [ngClass]="{ 'active': offer == selectedCfarOffer }">
                     <div fxFlex="100" (click)="onSelectOffer(offer)">
-                        <h3 class="offer-title">{{ computePercentage(offer) | percent }} Flight cost covered</h3>
+                        <h3 class="offer-title">
+                            {{ 'CFAR_OFFER_BANNER.COVERAGE_PERCENTAGE' | translate: 
+                                {
+                                    coverage: (computePercentage(offer) | percent)
+                                }
+                            }}
+                        </h3>
                         <span class="price">{{ offer?.premium | currency:offer?.currency:'symbol' }}</span>
                     </div>
                 </mat-card>
