--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.scss
@@ -63,6 +63,10 @@
                 font-weight: bold;
             }
 
+            .text-justify {
+                text-align: justify;
+            }
+
             .subtitle {
                 font-size: 16px;
                 font-weight: bold;
