fix mocked value

--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -35,7 +35,7 @@
                             <p>
                                 {{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_1' | translate }}
                                 <b>
-                                    {{ cfarContract?.expiryDateTime | date: ('COMMON.DATE_FORMAT' | translate):'':currentLang }}
+                                    {{ cfarContract.expiryDateTime | date: ('COMMON.DATE_FORMAT' | translate):'':currentLang }}
                                 </b>
                             </p>
                             <p>{{ 'CFAR_EXERCISE_DIALOG.DEADLINE_SENTENCE_2' | translate }}</p>
