Fixed a label issue when the address line 1 was empty

--- a/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -241,7 +241,7 @@
                                 <mat-form-field fxFlex="100" appearance="outline">
                                     <mat-label>{{ 'CFAR_EXERCISE_DIALOG.FORM.ADDRESS_LINE_1' | translate }}</mat-label>
                                     <input matInput formControlName="addressLine1">
-                                    <mat-error *ngIf="step2Form.get('addressLine1')?.invalid">{{ 'CFAR_EXERCISE_DIALOG.ADDRESS_LINE_1_ERROR' | translate }}</mat-error>
+                                    <mat-error *ngIf="step2Form.get('addressLine1')?.invalid">{{ 'CFAR_EXERCISE_DIALOG.FORM.ADDRESS_LINE_1_ERROR' | translate }}</mat-error>
                                 </mat-form-field>
     
                                 <mat-form-field fxFlex="100" appearance="outline">
