new event and new parameter

--- a/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
+++ b/src/app/pages/guides/cfar-offer-banner/cfar-offer-banner.component.html
@@ -14,6 +14,7 @@
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
                     (offerAccepted)="onOfferAccepted($event)"
+                    (offersLoaded)="onOffersLoaded($event)"
                 ></hopper-cfar-offer-banner>
             </div>
         </mat-tab>
