--- a/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/src/app/pages/guides/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -14,6 +14,7 @@
                     [hCSessionId]="hCSessionId"
                     [itineraries]="itineraries"
                     (chooseCoverage)="onChooseCoverage($event)"
+                    (offersLoaded)="onOffersLoaded($event)"
                 ></hopper-cfar-offer-banner-large>
             </div>
         </mat-tab>
