--- a/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
+++ b/src/app/pages/guides/cfar-exercise-dialog/cfar-exercise-dialog.component.html
@@ -7,11 +7,13 @@
 
         <mat-tab label="Overview">
             <div class="p-16" fxLayoutGap="16px">
-                <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog(false)">
+                <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog(false)"
+                    aria-label="Open CFAR Exercise dialog">
                     Open CFAR Exercise dialog
                 </button>
 
-                <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog(true)">
+                <button mat-flat-button color="primary" (click)="onOpenCfarExerciseDialog(true)"
+                    aria-label="Open CFAR Exercise dialog as a sidebar">
                     Open CFAR Exercise dialog as a sidebar
                 </button>
             </div>
