--- a/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/src/app/pages/guides/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -6,8 +6,10 @@
 
         <mat-tab label="Overview">
             <div class="p-16">
-                <button mat-flat-button color="primary" (click)="onOpenCfarOfferDialog()">Open CFAR Offer
-                    dialog</button>
+                <button mat-flat-button color="primary" (click)="onOpenCfarOfferDialog()"
+                    aria-label="Open CFAR Offer dialog">
+                    Open CFAR Offer dialog
+                </button>
             </div>
         </mat-tab>
 
