--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,25 +4,26 @@
     </div>
 
     <div fxLayout="row" fxLayoutAlign="end center">
-        <button mat-button [matMenuTriggerFor]="themeMenu">
+        <button mat-button [matMenuTriggerFor]="themeMenu" aria-label="Open Menu">
             <mat-icon class="mr-8">palette</mat-icon>
             <span>{{ currentTheme }}</span>
         </button>
 
         <mat-menu #themeMenu="matMenu">
-            <button mat-menu-item *ngFor="let theme of themes" (click)="onSetTheme(theme)">
+            <button mat-menu-item *ngFor="let theme of themes" attr.aria-label="Apply {{ theme }} theme" (click)="onSetTheme(theme)">
                 <mat-icon>palette</mat-icon>
                 <span>{{ theme }}</span>
             </button>
         </mat-menu>
 
-        <button mat-button [matMenuTriggerFor]="languageMenu">
+        <button mat-button [matMenuTriggerFor]="languageMenu" ariaLabel="Language Selection">
             <mat-icon class="mr-8" svgIcon="flag_{{ currentLang }}"></mat-icon>
             <span>{{ currentLang | uppercase }}</span>
         </button>
 
         <mat-menu #languageMenu="matMenu">
-            <button mat-menu-item *ngFor="let language of languages" (click)="onSetLanguage(language)">
+            <button mat-menu-item *ngFor="let language of languages" (click)="onSetLanguage(language)"
+                attr.aria-label="Set the current language to {{ language }}">
                 <mat-icon svgIcon="flag_{{ language }}"></mat-icon>
                 <span>{{ language | uppercase }}</span>
             </button>
