add description to link

--- a/src/app/pages/guides/guides.component.html
+++ b/src/app/pages/guides/guides.component.html
@@ -2,7 +2,7 @@
 
     <h2 fxFlex="100">
         Hopper Cloud Airlines Angular SDK offers a wide variety of UI components based on
-        <a href="https://material.io/components">the Material Design specification</a>
+        <a aria-describedby="Material design specification" href="https://material.io/components">the Material Design specification</a>
     </h2>
 
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="16px">
