--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -3,7 +3,7 @@
         <h1>Page Not Found</h1>
         <p>We're sorry. The page you are looking for cannot be found.</p>
         
-        <a routerLink="/" mat-raised-button color="primary">
+        <a routerLink="/" aria-describedby="Go Home link" mat-raised-button color="primary">
             <span class="mat-button-wrapper">Go Home</span>
         </a>
     </div> 
