--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -30,7 +30,10 @@
 
                 <div fxFlex="100" class="py-8" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="start center" fxLayoutGap="8px">
                     <span>{{ 'CFAR_OFFER_DIALOG.TERMS_WARNING' | translate }}</span>
-                    <a href="#" target="_blank">{{ 'CFAR_OFFER_DIALOG.TERMS_LINK_TEXT' | translate }}</a>
+                    <a href="#" attr.aria-describedby="{{ 'CFAR_OFFER_DIALOG.TERMS_LINK_TEXT' | translate }}" 
+                        target="_blank">
+                        {{ 'CFAR_OFFER_DIALOG.TERMS_LINK_TEXT' | translate }}
+                    </a>
                 </div>
             
             </div>
