--- a/src/app/shared/components/inputs/inputs.component.scss
+++ b/src/app/shared/components/inputs/inputs.component.scss
@@ -40,5 +40,9 @@
                 color: map-get($primary-palette, "500-contrast");
             }
         }
+
+        a {
+            color: map-get($primary-palette, default);
+        }
     }
 }
