--- a/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-dialog/cfar-offer-dialog.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div fxFlex="100" class="powered-by-container">
-        <span class="powered-by px-16 py-8">{{ 'CFAR_OFFER_DIALOG.POWERED_BY' | translate }}</span>
+        <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
     </div>
 
 </div>
