--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -4,10 +4,11 @@
 
         <mat-card *ngIf="cfarOffers" class="mat-elevation-z4 m-16 pointer" fxFlex fxLayout="row wrap">
     
-            <div fxFlex="90" fxFlex.lt-md="100" fxLayout="row wrap">
+            <div fxFlex="100" fxLayout="row wrap">
 
-                <div fxFlex="100">
+                <div fxFlex="100" fxLayout="row" fxLayoutAlign="space-between center">
                     <h2 class="offer-title px-16 m-0">{{ 'CFAR_OFFER_BANNER_LARGE.TITLE' | translate }}</h2>
+                    <img class="powered-by-image" src="assets/powered-by-hopper.svg" />
                 </div>
 
                 <div class="mb-32" fxFlex="100" fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
