terms link + powered by logo

--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.scss
@@ -78,6 +78,10 @@
                     border: none;
                 }
             }
+
+            a {
+                color: map-get($primary-palette, default);
+            }
         }
     }
 }
