--- a/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
+++ b/projects/angular-sdk/src/components/cfar-offer-banner-large/cfar-offer-banner-large.component.html
@@ -25,6 +25,12 @@
                                 <span>{{ desc }}</span>
                             </div>
                         </ng-container>
+
+                        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px">
+                            <a href="#" attr.aria-describedby="{{ 'COMMON.TERMS_LINK_TEXT' | translate }}" target="_blank">
+                                {{ 'COMMON.TERMS_LINK_TEXT' | translate }}
+                            </a>
+                        </div>
                 
                     </div>
         
